--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -29,10 +29,11 @@
 
 	  <th class="tbl_lmd">Patient</th>
 	  <th class="tbl_sm">Type</th>
-          <th class="tbl_md">HC/IFH #</th>
           <th class="tbl_md">Diagnosis</th>
-          <th class="tbl_lmd">Procedure(s)</th>
-          <th class="tbl_lsm">HCPSvcs</th>
+	  <th class="tbl_lmd">Services</th>
+          <th class="tbl_lsm">Insured</th>
+          <th class="tbl_lsm">IFH</th>
+          <th class="tbl_lsm">Cash</th>
           <th class="tbl_xmd">Ttl. Fee</th>
           <th class="tbl_md">Status</th>
 	  <th class="tbl_md">Acc Ref#</th>
