--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -10,7 +10,7 @@
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
-	  <th class="tbl_lsm"><%= sortable 'entry_ts', 'Time' %></th>
+	  <th class="tbl_sm"><%= sortable 'entry_ts', 'Time' %></th>
 	  <th class="tbl_sm">Room</th>
 	  <th class="tbl_md">
 	  <% if @docs.present? && @docs.size > 1 %>
