--- a/app/views/layouts/_select_doctor.html.erb
+++ b/app/views/layouts/_select_doctor.html.erb
@@ -8,7 +8,7 @@
                             :id,
                             :lname,
                             options = {prompt: 'Set Doctor', selected: doc_id},
-                            html_options = {onchange: 'this.form.submit();'}
+                            html_options = {onchange: 'this.form.submit();', style: "background-color: #fff;"}
                            ) %>
     </div>
   </div>
