--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -37,7 +37,17 @@ p.medium {
    padding-left: 5px;
    padding-right: 5px;
    padding-bottom: 15px;
- /*  vertical-align: bottom; */
+}
+
+.help-container {
+   width: 98%;
+   min-height: 100%; //92%;
+   height: auto !important; /* Stick footer to bottom in IE6 */
+   height: 100%;
+   margin: 0 auto -20px;  /* footer height */
+   padding-left: 5px;
+   padding-right: 5px;
+   padding-bottom: 30px;
 }
 
 table {
@@ -663,3 +673,31 @@ card > hr {
   z-index:300;
 }
 
+.updated{
+  padding: .25em 0 2.5em;
+  color: #b9b9b9;
+  font-size: .9em;
+}
+
+// Help file header
+.header{
+  display:block;
+  border-bottom:1px solid #dadada;
+  color:#000;
+  font-size:1.96em;
+  padding-bottom:.16em;
+  line-height:1.1;
+//  font-family:arial,helvetica,sans-serif
+}
+
+.table-responsive {
+  overflow-y: visible !important;
+}
+
+// Move page down to make anchors visible
+:target {
+  display: block;
+  position: relative;
+  top: -60px;
+  visibility: hidden;
+}
