--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Forgot password") %>
-<div class="col-sm-4 col-sm-offset-4">
+<div class="col-md-2 col-sm-4 col-md-offset-5 col-sm-offset-4">
  <h3 class='display-1'>Password Reset</h3>
  <div class="well">
 
