--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -39,7 +39,7 @@ Call to confirm: <b>(905) 561-9255</b>
 
 <div align="right">
   <span style="width:500px; float:left; margin-left: 20px; ">
-  <%= render "schedules/schedule" %>
+  <%= render "schedules/full_schedule" %>
   </span>
   
 <div class='spacer-30'></div>
